--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "axios": "^0.21.1",
+    "axios": ">=0.21.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "^5.2.0",
